# booot

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  railway.json
landing/: .env.example  Dockerfile  README.md  app.py
landing/static/: index.html
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_fns_opendata.py
src/: config.py  load_opendata.py  logging_conf.py  main_bot.py
src/bot/: states.py  wizard.py
src/bot/handlers/: common.py  company.py  new_search.py  searches.py
src/bot/keyboards/: company.py
src/db/: base.py  mapping.py  models.py  repositories.py
src/domain/: company.py  criteria.py  hashing.py  matcher.py  normalize.py  tax_status.py
src/opendata/: datasets.py  downloader.py  enricher.py  loader.py  parser.py
src/providers/: base.py  checko.py  datanewton.py  exceptions.py  fake.py  registry.py
src/services/: delivery.py  search_runner.py  web_research.py
tests/: test_criteria.py  test_hashing.py  test_matcher.py  test_normalize.py  test_opendata_parser.py  test_pipeline.py  test_provider_checko.py  test_provider_datanewton.py  test_search_runner_db.py  test_status_lines.py  test_tax_status.py  test_web_research.py
tests/fixtures/: datanewton_company.json  snr_sample.xml
